# sampi

./: Cargo.toml  LICENSE  README.md
docs/: concept.md
src/: input.rs  loader.rs  main.rs  mixer.rs  voice.rs
